# public-transport

./: .gitignore  .gitmodules
.cmake/: Vcpkg.cmake
client/: .dependencies  CMakeLists.txt  CMakePresets.json
client/src/: amministratore.c  defines.h  guidatore.c  main.c  passeggero.c  utils.c
doc/: progetto.docx
server/: SistemaTrasportoPubblico.mwb  SistemaTrasportoPubblico.sql  transportdb.mwb
src/: defines.h  main.c
